Создание страницы карточки товара и изменение асинхронного кода на синхронный для добавления и удаления товаров корзины и избранного, плюс небольшие фиксы муршрутизации для верстки

--- a/Pages/Account/Authorization/Login.razor
+++ b/Pages/Account/Authorization/Login.razor
@@ -27,7 +27,7 @@
                 <span class="form__disclaimer">Выполняя вход вы соглашаетесь с <a href="/rules/privacy" aria-label="Перейти на страницу политики конфиденциальности" title="Перейти на страницу политики конфиденциальности">Политикой конфиденциальности</a> и <a href="/rules/use-conditions" aria-label="Перейти на страницу условий использования" title="Перейти на страницу условий использования">Условиями использования</a> Veco</span>
                 <button class="form__button-submut" type="submit" aria-label="Кнопка подтверждения отправки данных">Войти</button>
                 <a class="form__fogot-password" href="#">Забыл пароль</a>
-                <a class="form__register" @onclick="NavigateToRegister">Зарегистрироваться</a>
+                <a class="form__register" href="/account/authorization/register/@LoginViewModel.ReturnUrl.Replace('/', '$')">Зарегистрироваться</a>
                 @*<div class="form__external-logins-block external-logins-block">
                     <span class="external-logins-block__title">Войти с помощью</span>
                     <button class="external-logins-block__button-provider" name="login-facebook-button" value="facebook" style="background-color: rgb(63,101,166); color: white;" type="submit" title="Войти с помощью Facebook" aria-label="Войти с помощью Facebook"><img src="./icons/login/Facebook.svg" alt="Иконка  с помощью Facebook" title="Войти с помощью Facebook">Facebook</button>
