--- a/Pages/Account/Orders.razor.scss
+++ b/Pages/Account/Orders.razor.scss
@@ -138,6 +138,7 @@
         background-color: rgb(246,246,246);
 
         img {
+            padding: 2%;
             margin: 2%;
             position: absolute;
             top: 50%;
