--- a/Pages/Account/Cart.razor
+++ b/Pages/Account/Cart.razor
@@ -26,9 +26,9 @@
                             @foreach (var cartProduct in currentUser.Cart.Products)
                             {
                                 <div class="products-cards__product-card">
-                                    <a class="product-card__image" href="#" aria-label="Перейти в личную карточку товара @cartProduct.Article.Model.Name"><img src="data:image/png;base64,@Convert.ToBase64String(cartProduct.Article.Model.MainPhoto)" alt="Картинка @cartProduct.Article.Model.Name" title="@cartProduct.Article.Model.Name"></a>
+                                    <a class="product-card__image" href="/products/product-card/@cartProduct.Article.Model.Id" aria-label="Перейти в личную карточку товара @cartProduct.Article.Model.Name"><img src="data:image/png;base64,@Convert.ToBase64String(cartProduct.Article.Model.MainPhoto)" alt="Картинка @cartProduct.Article.Model.Name" title="@cartProduct.Article.Model.Name"></a>
                                     <div class="product-card__product-info">
-                                        <h3 class="product-info__name"><a href="#" aria-label="Перейти в личную карточку товара @cartProduct.Article.Model.Name">@cartProduct.Article.Model.Name</a></h3>
+                                        <h3 class="product-info__name"><a href="/products/product-card/@cartProduct.Article.Model.Id" aria-label="Перейти в личную карточку товара @cartProduct.Article.Model.Name">@cartProduct.Article.Model.Name</a></h3>
                                         <span class="product-info__color">Цвет: @cartProduct.Article.Color</span>
                                         <span class="product-info__size">Размер: @cartProduct.Article.Size</span>
                                     </div>
@@ -46,15 +46,15 @@
                                 <span class="block-price__discount-price">22 400 ₽</span>
                                 </div>*@
                                 <div class="product-card__icons-block">
-                                    <a class="icons-block__cart-icon" @onclick="async () => await RemoveProductFromCartAsync(cartProduct)" aria-label="Удалить товар @cartProduct.Article.Model.Name из корзины"><img src="/icons/cart/Slash-cart.svg" alt="Перечеркнутая иконка корзины" title="Удалить из корзины"></a>
+                                    <a class="icons-block__cart-icon" @onclick="async () => RemoveProductFromCart(cartProduct)" aria-label="Удалить товар @cartProduct.Article.Model.Name из корзины"><img src="/icons/cart/Slash-cart.svg" alt="Перечеркнутая иконка корзины" title="Удалить из корзины"></a>
                                     <label class="cart-icon__select-checkbox select-checkbox"><input name="login-remember-me-checkbox" @bind="cartProduct.IsSelected" @onclick="() => ProductSelecterToggle(cartProduct)" type="checkbox" aria-label="Чек-бокс для выборки всех товаров в корзине"><span></span></label>
                                     @if (currentUser.ListFavourites.Products.Any(favoriteProduct => favoriteProduct.Article.Id == cartProduct.Article.Id))
                                     {
-                                        <a class="icons-block__favorites-icon" @onclick="async () => await RemoveProductFromFavoritesAsync(cartProduct)" aria-label="Удалить товар @cartProduct.Article.Model.Name из избранного"><img src="/icons/cart/Slash-heart.svg" alt="Перечеркнутая иконка избранного" title="Удалить из избранного"></a>
+                                        <a class="icons-block__favorites-icon" @onclick="async () => RemoveProductFromFavorites(cartProduct)" aria-label="Удалить товар @cartProduct.Article.Model.Name из избранного"><img src="/icons/cart/Slash-heart.svg" alt="Перечеркнутая иконка избранного" title="Удалить из избранного"></a>
                                     }
                                     else
                                     {
-                                        <a class="icons-block__favorites-icon" @onclick="async () => await AddProductInFavoritesAsync(cartProduct)" aria-label="Добавить товар @cartProduct.Article.Model.Name в избранное"><img src="/icons/cart/Heart.svg" alt="Иконка избранного" title="Добавить в избранное"></a>
+                                        <a class="icons-block__favorites-icon" @onclick="async () => AddProductInFavorites(cartProduct)" aria-label="Добавить товар @cartProduct.Article.Model.Name в избранное"><img src="/icons/cart/Heart.svg" alt="Иконка избранного" title="Добавить в избранное"></a>
                                     }
                                 </div>
                                 </div>
@@ -73,7 +73,7 @@
                                 @*<div class="information-block__info"><span>Скидка</span><span>300 ₽</span></div>*@
                                 <div class="information-block__info"><span><strong>Итого</strong></span><span><strong>0 ₽</strong></span></div>
                             }
-                            <a class="information-block__button" @onclick="NavigateToOrderRegistrationAsync" type="submit" aria-label="Кнопка для перехода на страницу Оформления заказа">Оформить заказ</a>
+                            <a class="information-block__button" href="/account/order-registration" @onclick="() => Db.SaveChangesAsync()" type="submit" aria-label="Кнопка для перехода на страницу Оформления заказа">Оформить заказ</a>
                         </div>
                     </div>
                 }
