--- a/Pages/Account/Orders.razor
+++ b/Pages/Account/Orders.razor
@@ -37,8 +37,8 @@
                                                 @foreach (var productModelGroup in DisctictProductsByProductModel(order.Products))
                                                 {
                                                     <div class="products-cards__product-card">
-                                                        <a class="product-card__image" href="#" aria-label="Ссылка перехода на карточку товара @productModelGroup.First().Name"><img src="data:image/png;base64,@Convert.ToBase64String(productModelGroup.First().MainPhoto)" alt="@productModelGroup.First().Name"></a>
-                                                        <a class="product-card__name" href="#" aria-label="Ссылка перехода на карточку товара @productModelGroup.First().Name">@productModelGroup.First().Name</a>
+                                                        <a class="product-card__image" href="/products/product-card/@productModelGroup.First().Id" aria-label="Ссылка перехода на карточку товара @productModelGroup.First().Name"><img src="data:image/png;base64,@Convert.ToBase64String(productModelGroup.First().MainPhoto)" alt="@productModelGroup.First().Name"></a>
+                                                        <a class="product-card__name" href="/products/product-card/@productModelGroup.First().Id" aria-label="Ссылка перехода на карточку товара @productModelGroup.First().Name">@productModelGroup.First().Name</a>
                                                         <div class="product-card__price-block">
                                                             <!-- hasDiscount -->
                                                             <span class="price-block__price">@productModelGroup.Sum(productModel => productModel.Price).ToString("### ### ###") ₽</span>
