--- a/Pages/Products/ProductCard.razor.css
+++ b/Pages/Products/ProductCard.razor.css
@@ -51,17 +51,13 @@
   border-radius: 7px;
   gap: 15px;
   padding: 25px;
-  border: 1px solid black; }
+  outline: 1px solid black; }
 
 .images-block__main-image {
   position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 200px;
-  min-width: 200px;
-  max-width: 400px;
-  max-height: 400px;
   height: 100%;
   width: 100%; }
 
@@ -76,9 +72,12 @@
   position: relative;
   width: 100%;
   height: 100%;
+  min-height: 200px;
+  min-width: 200px;
+  max-width: 400px;
+  max-height: 400px;
   top: 0;
   left: 0;
-  cursor: pointer;
   object-fit: contain; }
 
 .main-image__white-rect {
@@ -87,7 +86,7 @@
   width: 200px;
   height: 200px;
   opacity: 0.3;
-  border: 1px solid grey;
+  outline: 1px solid grey;
   background-color: #fff;
   pointer-events: none; }
 
@@ -103,18 +102,18 @@
   margin-left: 17px;
   background-repeat: no-repeat;
   background-color: white;
-  border: 1px solid grey;
+  outline: 1px solid grey;
   z-index: 5; }
 
 .secondary-images__image {
   height: 100px;
   width: 100px;
   object-fit: contain;
-  border: 1px transparent solid;
+  outline: 1px transparent solid;
   cursor: pointer;
   padding: 5px; }
   .secondary-images__image:hover {
-    border: 1px black solid; }
+    outline: 1px black solid; }
 
 .features-block__choose-blocks {
   display: flex;
@@ -150,14 +149,14 @@
   gap: 8px; }
 
 .colors-block__color {
+  cursor: pointer;
   width: 100%;
   background-color: transparent;
   padding: 12px 20px;
-  border: 1px solid black;
+  outline: 1px solid black;
   border-radius: 20px; }
   .colors-block__color:hover {
-    padding: 11px 19px;
-    border: 2px solid black; }
+    outline: 2px solid black; }
 
 .size-choose-block__title {
   font-weight: 600;
@@ -173,11 +172,10 @@
   width: 100%;
   background-color: transparent;
   padding: 12px 20px;
-  border: 1px solid black;
+  outline: 1px solid black;
   border-radius: 20px; }
   .sizes-block__size:hover {
-    padding: 11px 19px;
-    border: 2px solid black; }
+    outline: 2px solid black; }
 
 .info-block__title {
   font-weight: 600;
@@ -238,6 +236,8 @@
   font-size: 16px;
   padding: 20px;
   border-radius: 50px; }
+  .submut-block__add-to-cart-button:hover {
+    outline: 1px solid black; }
 
 .submut-block__remove-from-cart-button {
   white-space: nowrap;
@@ -248,35 +248,37 @@
   font-size: 16px;
   padding: 20px;
   border-radius: 50px; }
+  .submut-block__remove-from-cart-button:hover {
+    outline: 1px solid black; }
 
 .submut-block__add-to-favorites-button {
   white-space: nowrap;
   text-align: center;
   width: 100%;
-  border: 2px solid black;
+  outline: 2px solid black;
   font-size: 16px;
   padding: 20px;
   border-radius: 50px; }
   .submut-block__add-to-favorites-button:hover {
-    border: 2px solid black; }
+    outline: 2px solid black; }
 
 .submut-block__remove-from-favorites-button {
   white-space: nowrap;
   text-align: center;
   width: 100%;
-  border: 2px solid black;
+  outline: 2px solid black;
   font-size: 16px;
   padding: 20px;
   border-radius: 50px; }
   .submut-block__remove-from-favorites-button:hover {
-    border: 2px solid black; }
+    outline: 2px solid black; }
 
 .selected-image {
-  border: 1px black solid; }
+  outline: 1px black solid; }
 
 .selected-button {
   padding: 11px 19px;
-  border: 2px solid black; }
+  outline: 2px solid black; }
 
 @media (max-width: 830px) {
   .product-card__product-block {
